# wftr

./: .gitignore  API_REFERENCE.md  BACKGROUND_RUNNING.md  COMPLETE_SYSTEM_DOCUMENTATION.md  COMPREHENSIVE_BOT_DOCUMENTATION.md  DAILY_ANALYSIS_IMPLEMENTATION.md  DASHBOARD_BUTTON_FIXES.md  DRCT_Entry_Analysis_Report.md  END_OF_DAY_VOLUME_LOGIC.md  EXIT_FIXES_SUMMARY.md  IDENTICAL_ENTRY_LOGIC_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  MASTER_PROMPT.md  OPTIMIZATIONS_APPLIED.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_ENHANCED_BOT.md  README_RUNNING.md  README_SCHEDULED_BOT.md  README_SIMULATOR.md  SIMULATOR_CLEANUP_SUMMARY.md  SIMULATOR_ENHANCEMENT_COMPLETE.md  api_test.py  check_monitoring_tickers.py  debug_rolr.py  debug_rolr_fixed.py  drct_entry_analysis.py  improved_entry_config.py  pyproject.toml  requirements.txt  run.bat  run_background.bat  run_background.ps1  run_background.sh  run_bot_simple.py  run_daily_analysis.bat  run_dashboard_with_bot.py  run_enhanced_bot.py  (+38 more)
analysis/: CHANGES_APPLIED.md  CURRENT_INTERVAL_INFO.md  IMPLEMENTATION_SUMMARY.md  INTERVAL_CHANGE_APPLIED.md  analyze_flyx_rejection.py  analyze_jtai_trade.py  analyze_neog_trade.py  analyze_sxtc_missed_opportunity.py  analyze_uavs_trade.py  flyx_full_day_analysis.md  flyx_missed_trade_analysis.md  flyx_rejection_analysis.txt  flyx_rejection_analysis_report.md  flyx_simulation_results.md  jtai_optimal_trades.md  jtai_trade_analysis_report.md  neog_optimal_trades.md  neog_trade_analysis_report.md  simulate_flyx_full_day.py  simulate_sxtc_full_day.py  (+5 more)
(+987 files in other folders)
